fix(selectedevent): event button correctly wrap

--- a/src/components/events/Events.scss
+++ b/src/components/events/Events.scss
@@ -22,6 +22,8 @@
     padding: 5px;
     margin-right: 10px;
     transition: all 0.3s;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
     
     &:hover {
       background-color: lighten($color: #010059, $amount: 10);
